# indium

./: .gitignore  CMakeLists.txt  LICENSE  README.md  devnotes.md
include/indium/: base.hpp  binary-archive.hpp  blit-command-encoder.hpp  buffer.hpp  command-buffer.hpp  command-encoder.hpp  command-queue.hpp  compute-command-encoder.hpp  compute-pipeline.hpp  counter.hpp  depth-stencil.hpp  device.hpp  drawable.hpp  indium.hpp  init.hpp  library.hpp  linked-functions.hpp  pipeline.hpp  rasterization-rate.hpp  render-command-encoder.hpp  render-pass.hpp  render-pipeline.hpp  resource.hpp  sampler.hpp  texture.hpp  types.hpp  vertex-descriptor.hpp
include/indium-kit/: indium-kit.hpp  layer.hpp
include/iridium/: iridium.hpp
private-include/indium/: blit-command-encoder.private.hpp  buffer.private.hpp  command-buffer.private.hpp  command-encoder.private.hpp  command-queue.private.hpp  compute-command-encoder.private.hpp  compute-pipeline.private.hpp  depth-stencil.private.hpp  device.private.hpp  drawable.private.hpp  dynamic-vk.hpp  indium.private.hpp  instance.private.hpp  library.private.hpp  pipeline.private.hpp  render-command-encoder.private.hpp  render-pipeline.private.hpp  sampler.private.hpp  texture.private.hpp  types.private.hpp
private-include/indium-kit/: indium-kit.private.hpp  layer.private.hpp
private-include/iridium/: air.hpp  bits.hpp  dynamic-llvm.hpp  llvm.hpp  spirv.hpp
src/indium/: blit-command-encoder.cpp  buffer.cpp  command-buffer.cpp  command-encoder.cpp  command-queue.cpp  compute-command-encoder.cpp  compute-pipeline.cpp  counter.cpp  depth-stencil.cpp  device.cpp  drawable.cpp  dynamic-vk.cpp  indium.cpp  library.cpp  render-command-encoder.cpp  render-pipeline.cpp  resource.cpp  sampler.cpp  texture.cpp
src/indium-kit/: layer.cpp
src/iridium/: air.cpp  dynamic-llvm.cpp  iridium.cpp  spirv.cpp
src/mtl2spv/: mtl2spv.cpp
test/: AAPLShaders.metallib  CMakeLists.txt  shader.vert  test.cpp
test/basic-compute/: CMakeLists.txt  add.metallib  basic-compute.cpp
test/basic-compute/shadersrc/: add.metal
test/cube/: CMakeLists.txt  README.md  cube.cpp  shaders.metallib
test/cubemap/: CMakeLists.txt  README.md  cubemap.cpp  shaders.metallib
test/lighting/: CMakeLists.txt  README.md  lighting.cpp  shaders.metallib
test/sampler/: AAPLShaders.metallib  CMakeLists.txt  README.md  sampler.cpp
test/texturing/: CMakeLists.txt  README.md  shaders.metallib  texturing.cpp
test/triangle/: AAPLShaders.metallib  CMakeLists.txt  README.md  triangle.cpp
